@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST pwcrypt-1.2.2.tar.gz 36902 RMD160 ced5fbdbded99d8647878ae4655a4fce2e8f0942 SHA1 8382154e5c344873efdbd9b065e57c8678bae16c SHA256 276710b34f9e66ba6b19ba43c46abaf727a28ed94bbd209a9bd28a655029c2e1
-EBUILD pwcrypt-1.2.2-r1.ebuild 783 RMD160 d9da76424950c4087f3a48c4dcdc12ab9b2eb100 SHA1 8d48857e02584a2c47f6f5fbf5806b0d0a7844b3 SHA256 33bbe791b9f1a79f9bc74ccc60a62e2a616eddc497850c018cd4ac63887019f8
-EBUILD pwcrypt-1.2.2.ebuild 620 RMD160 159f72a0471b4e13bc40fc1d8c68370637701e77 SHA1 945132a9a7712298cac6318f55e3f8c24b8831a4 SHA256 e5f6dcf771bd2a85e36b3060856ba0c0c2495a7cfbf2e68bf26eaa5a93dd2e7d
-MISC ChangeLog 1337 RMD160 f3d4fb0a763dbbe483cb510543789d7944b938dc SHA1 acb91b8a9b0ff1c5498527cc5f25d1d53ee7e987 SHA256 3ffe75c1eabf025a52c9023a62162e7393d2104009fa0359be3a4d0440854cb5
+EBUILD pwcrypt-1.2.2-r1.ebuild 750 RMD160 794f84749e60e8971cb9b624f2ebd86801da8bf7 SHA1 6c6bbe68f70e3aa3416f544e016bda8b35a1d42f SHA256 734d719a677977f65a2ae87b695d3235664da57403715f7f17b2c67d1d497936
+EBUILD pwcrypt-1.2.2.ebuild 591 RMD160 670a576c4e1f86030ef1e34f1f3a5ee7ae9b8ec0 SHA1 5dea374067c61b02968bdeb2107f823aa1ea9805 SHA256 e94db7e476d10ebce15a12c8a34d52fe5e01358850152a6c3925a881ea4a173a
+MISC ChangeLog 1458 RMD160 83d92f1db99b2b1d41bc4505c9197582c6282b0c SHA1 53bf2981bddafc36ef991ec1c91dc1163e732374 SHA256 2a1fdf7304d738185ce5018fa882ae6832b09d9eaa21553c4d326f4aeb475d98
 MISC metadata.xml 230 RMD160 8e45109dbaf3c193afdb318002c1def7cb62dfa1 SHA1 9bd7aea9376c216b3f55303d1334a337cd6f06a2 SHA256 87fc07a55ee7814a0505ae1c24a871ac29ae7691c5383550647382a2b26277ae
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk5TnJ0ACgkQL46suuyRem3CgACgqRXyWaHCQmQaXZgWDLtUrdbd
+d/IAnjG5sxJ4QMq09zZgnpW7YLFe8e4G
+=Hdf3
+-----END PGP SIGNATURE-----
