@@ -1,33 +1,31 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/pwcrypt/pwcrypt-1.2.2-r1.ebuild,v 1.2 2011/06/14 15:06:32 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/pwcrypt/pwcrypt-1.2.2-r1.ebuild,v 1.3 2011/08/23 12:26:58 hattya Exp $
 
-EAPI="3"
+EAPI="4"
 
 inherit toolchain-funcs
-
-IUSE=""
 
 DESCRIPTION="An improved version of cli-crypt (encrypts data sent to it from the cli)"
 HOMEPAGE="http://xjack.org/pwcrypt/"
 SRC_URI="http://xjack.org/pwcrypt/downloads/${P}.tar.gz"
 
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~ppc x86"
 SLOT="0"
+KEYWORDS="~amd64 ~ppc x86"
+IUSE=""
 
 src_prepare()  {
-	sed -i "s/make\( \|$\)/\$(MAKE)\1/g" Makefile.in || die
+	sed -i "s/make\( \|$\)/\$(MAKE)\1/g" Makefile.in
 	sed -i \
 		-e "/^LDFLAGS/s/= /= @LDFLAGS@ /" \
 		-e "/-install/s/ -s//" \
-		src/Makefile.in \
-		|| die
+		src/Makefile.in
 
 	tc-export CC
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die
-	dodoc CREDITS README || die
+	emake DESTDIR="${D}" install
+	dodoc CREDITS README
 }
