@@ -1,30 +1,25 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/pwcrypt/pwcrypt-1.2.2.ebuild,v 1.12 2008/10/26 15:36:48 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/pwcrypt/pwcrypt-1.2.2.ebuild,v 1.13 2011/08/23 12:26:58 hattya Exp $
+
+EAPI="4"
 
 inherit toolchain-funcs
-
-IUSE=""
 
 DESCRIPTION="An improved version of cli-crypt (encrypts data sent to it from the cli)"
 HOMEPAGE="http://xjack.org/pwcrypt/"
 SRC_URI="http://xjack.org/pwcrypt/downloads/${P}.tar.gz"
 
 LICENSE="GPL-2"
-KEYWORDS="amd64 ppc x86"
 SLOT="0"
+KEYWORDS="amd64 ppc x86"
+IUSE=""
 
-src_compile() {
-
+src_prepare()  {
 	tc-export CC
-	econf || die
-	emake || die
-
 }
 
 src_install() {
-
-	dobin src/pwcrypt || die
+	dobin src/pwcrypt
 	dodoc CREDITS README
-
 }
